--- a/index.html
+++ b/index.html
@@ -72,15 +72,17 @@
   </div>
    </div>
 
+
   <section class="image">
 
       <!-- <img id="img" src="pic.jpg"> -->
-      <div class="inner_img">
+      <section class="inner_img">
       <div class="img_text">
       <h1 >Software fueling digital marketing</h1>
               <a href="#" class="img_btn">Learn more</a></div>
-              </div>
+              </section>>
           </section> 
+     
      
 <div class="c-p-c">
   <div class="container">
