--- a/index.html
+++ b/index.html
@@ -24,10 +24,6 @@
                <div>
                 <a href="#news">News</a>
                 <a href="#intranet">Intranet</a> </div>
-            <!-- </div> -->
-
-
-            <!-- <div class="col-sm-4 col-offset-sm-9"> -->
               <div class="row">
                 <div class="col-sm-5 col-sm-offset-0 col-md-4 col-md-offset-0">
                                   <div class="dropdown">
@@ -51,7 +47,7 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-2 col-sm-offset-0 col-md-2 col-md-offset-1">
-        <figure><img id="logo" src="logo.png"></figure>
+        <figure><img id="logo" src="images/logo.png"></figure>
       </div>
       <div class="col-sm-5 col-sm-offset-0 col-md-4 col-offset-md-0">
         <a href="">Company</a>
@@ -60,11 +56,8 @@
       </div>
       <div class="col-sm-5 col-sm-offset-0 col-md-3 col-md-offset-1">
          <div class="search-container">
-    <!-- <form action="/action_page.php"> -->
       <input type="text" placeholder="Search.." name="search">
       <button type="submit" class="btn btn-sm btn-success">Search</button>
-      <!-- <a href="#" id="btn">Search</a> -->
-    <!-- </form> -->
   </div>
       </div>
 
@@ -75,7 +68,6 @@
 
   <section class="image">
 
-      <!-- <img id="img" src="pic.jpg"> -->
       <section class="inner_img">
       <div class="img_text">
       <h1 >Software fueling digital marketing</h1>
@@ -90,7 +82,7 @@
       <div class="col-md-4 col-md-offset-0 col-sm-10 col-sm-offset-1">
         <a href="" id="cpca">
           <div id="cpccont">
-          <img id="cpcimage" src="company.jpg">
+          <img id="cpcimage" src="images/company.jpg">
           <h5 id="cpctext">Company</h5>
           </div>
           </a>
@@ -98,7 +90,7 @@
       <div class="col-md-4 col-md-offset-0 col-sm-10 col-sm-offset-1">
         <a href="" id="cpca">
           <div id="cpccont">
-          <img id="cpcimage" src="products.png">
+          <img id="cpcimage" src="images/products.png">
           <h5 id="cpctext">Products</h5>
           </div>
               </a>
@@ -106,7 +98,7 @@
       <div class="col-md-4 col-md-offset-0 col-sm-10 col-sm-offset-1">
         <a href="" id="cpca">
                <div id="cpccont">
-          <img id="cpcimage" src="contact.jpg">
+          <img id="cpcimage" src="images/contact.jpg">
           <h5 id="cpctext">Contact</h5>
           </div>
         </a>
@@ -137,70 +129,51 @@
     </div>
     </div>
   </div>
-<!-- <div class="fake-div"> -->
-<!-- </div>
-<div id="counter">
-    <div class="counter-value" data-count="300">0</div>
-    <div class="counter-value" data-count="400">100</div>
-    <div class="counter-value" data-count="1500">200</div>
-</div>
-<div class="fake-div">
-</div> -->
 
 </div>
 
 
 <div class="news">
 <script type="text/javascript" src="http://output59.rssinclude.com/output?type=js&amp;id=1173585&amp;hash=aba8167a991f40c84283d56a9b9d87c6"></script>
-<!-- <script type="text/javascript" src="http://output46.rssinclude.com/output?type=js&amp;id=1173627&amp;hash=9a4b4e213d668b900ea07934eb9b1264"></script> -->
 </div>
 
 <div class="references">
-  <h4 style="text-align: center; margin-bottom: 40px; font-size: 20px;">References</h4>
+  <h4>References</h4>
   <div class="container">
     <div class="row">
       <div class="col-md-3 col-md-offset-0 col-sm-5 col-sm-offset-1">
       <div id="ref_logo">
-        <a href="https://www.bosch.com/"><figure><img id="logo_refer" src="bosch.jpg"></figure></a>
+        <a href="https://www.bosch.com/"><figure><img id="logo_refer" src="images/bosch.jpg"></figure></a>
       </div>
       <div id="ref_text">
         <p style="font-size: 20px; font-weight: bold; text-align:center;">Robert Borch</p>
         <p style="text-align: center;"> Borch is a multinational engeneering and electronics company.</p>
       </div>
       </div>
-<!--     </div>
-  </div> -->
- <!--   <div class="container">
-    <div class="row"> -->
+
       <div class="col-md-3 col-md-offset-0 col-sm-5 col-sm-offset-0">
       <div id="ref_logo">
-       <a href="https://www.thebodyshop.com/"><figure><img id="logo_refer" src="bodyshop.jpg"></figure></a> 
+       <a href="https://www.thebodyshop.com/"><figure><img id="logo_refer" src="images/bodyshop.jpg"></figure></a> 
       </div>
       <div id="ref_text">
         <p style="font-size: 20px; font-weight: bold; text-align:center;">The Body Shop</p>
         <p style="text-align: center;">The Body Shop is a global beauty brand and it has more than 3000 stores in more than 60 countries.</p>
       </div>
       </div>
-   <!--  </div>
-  </div>
-   <div class="container">
-    <div class="row"> -->
+
        <div class="col-md-3 col-md-offset-0 col-sm-5 col-sm-offset-1">
       <div id="ref_logo">
-        <a href="https://www.laplandhotels.com/EN/"><figure><img id="logo_refer" src="laplandhotels.jpg"></figure></a>
+        <a href="https://www.laplandhotels.com/EN/"><figure><img id="logo_refer" src="images/laplandhotels.jpg"></figure></a>
       </div>
       <div id="ref_text">
         <p style="font-size: 20px; font-weight: bold; text-align:center;">Lapland Hotels</p>
         <p style="text-align: center;">Laplan Hotels is the largest and the most diverse hotel chain in Lapland.</p>
       </div>
       </div>
-  <!--   </div>
-  </div>
-   <div class="container">
-    <div class="row"> -->
+
        <div class="col-md-3 col-md-offset-0 col-sm-5 col-sm-offset-0">
       <div id="ref_logo">
-        <a href="http://www.ikea.com/"><figure><img id="logo_refer" src="ikea.png"></figure></a>
+        <a href="http://www.ikea.com/"><figure><img id="logo_refer" src="images/ikea.png"></figure></a>
       </div>
       <div id="ref_text">
         <p style="font-size: 20px; font-weight: bold; text-align:center;">IKEA</p>
@@ -223,80 +196,13 @@
        <div class="col-md-4 col-md-offset-5 col-sm-5 col-sm-offset-4">
        <form action="" method="post">
        <input type="text" name="" placeholder="Your email address">
-       <!-- <button style="text-align: center;" type="submit" class="btn btn-sm btn-success">Subscribe</button> -->
-
-
     <input type="submit" class="btn btn-sm btn-success" value="Subscribe" />
     <input type="hidden" name="button_pressed" value="1" />
-    <!-- <a href="#" id="btn">Subscribe</a> -->
 </form>
 </div>
 </div>
 </div>
 </div>
-
-<!-- <script>
-  <?php
-//if "email" variable is filled out, send email
-  if (isset($_REQUEST['button_pressed']))  {
-  
-  //Email information
-  $admin_email = "februarymary@gmail.com";
-  $email = $_REQUEST['email'];
-  $subject = $_REQUEST['subject'];
-  $comment = $_REQUEST['comment'];
-  
-  //send email
-  mail($admin_email, "$subject", $comment, "From:" . $email);
-  
-  //Email response
-  echo "Thank you for contacting us!";
-  }
-  
-  //if "email" variable is not filled out, display the form
-  else  {
-?>
-
- <form method="post">
-
-  Email: <input name="email" type="text" />
-
-  Subject: <input name="subject" type="text" />
-
-  Message:
-
-  <textarea name="comment" rows="15" cols="40"></textarea>
-
-  <input type="submit" value="Submit" />
-  </form>
-  
-<?php
-  }
-?>
-
-</script> -->
-
-
-<script>
-
-// <?php
-
-if(isset($_POST['button_pressed']))
-{
-    $to      = 'februarymary@gmail.com';
-    $subject = 'the subject';
-    $message = 'hello';
-    $headers = 'From: webmaster@example.com' . "\r\n" .
-        'Reply-To: webmaster@example.com' . "\r\n" .
-        'X-Mailer: PHP/' . phpversion();
-
-    mail($to, $subject, $message, $headers);
-
-    echo 'Email Sent.';
-}
-
-// ?>
-</script>
 
 
     </div>
